Changed timeout for polling from 45 to 60 seconds. Changed "TEC file" to "TEC events" to reduce user confusion.

--- a/hs_rhessys_inst_resource/templates/pages/runmodel.html
+++ b/hs_rhessys_inst_resource/templates/pages/runmodel.html
@@ -275,7 +275,7 @@
       <div>
 	<em>Model command line parameters:</em><br />{{ run.model_command_line_parameters }}<br /><br />
 	{% if run.TEC_FILE %}
-	<em>TEC file:</em><br /><pre>{{ run.TEC_FILE }}</pre><br /><br />
+	<em>TEC events:</em><br /><pre>{{ run.TEC_FILE }}</pre><br /><br />
 	{% endif %}
 	{% if run.CLIMATE_STATION %}
 	<em>Climate station:</em>&nbsp;{{ run.CLIMATE_STATION }}<br />
@@ -310,7 +310,7 @@
               poll();
             }
           }, dataType: "json", error: poll});
-        }, 45000);
+        }, 60000);
       })();
     </script>
     {% endif %}
