* [#152] Added creative common badges to Rights statement

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1000,6 +1000,15 @@ body > .container{
     -webkit-border-radius: 6px;
 }
 
+.cc-image{
+    width:88px;
+    height:31px;
+}
+
+#permission-panel{
+    margin-top:20px;
+}
+
 
 #permission-panel .custom-well{
     height: 235px;
