--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -827,12 +827,76 @@ li.account p{
 	text-align: center;
     background: rgba(255, 255, 255, 0.5);
 }
+/* ===== Resource edit page changes ===== */
+#txt-title{
+    width: calc(100% - 100px);
+    font-size: 30px;
+    margin-bottom: 30px;
+    height: auto;
+}
 
+#txt-abstract{
+    height: 155px;
+}
+
+.form-control{
+    margin-bottom:8px;
+}
+
+.no-padding{
+    padding:0;
+}
+
+.icon-remove{
+    font-size: 17px;
+    top: 3px;
+    left: 6px;
+    color: rgb(217, 83, 79);
+    cursor:pointer;
+}
+
+.icon-add{
+    font-size: 17px;
+    top: 3px;
+    left: 1px;
+    color: #5cb85c;
+    cursor:pointer;
+}
+
+.icon-add:hover{
+    color: #47a447;
+}
+
+.icon-remove:hover{
+    color: rgb(168, 69, 66);
+}
+
+#panel-left{
+    padding-right:8px;
+    padding-left:0;
+    margin-bottom: 10px;
+}
+
+#panel-right{
+    padding-left:8px;
+    padding-right:0;
+    margin-bottom: 10px;
+}
 
 /* ===== Resource UI changes ===== */
 html, body{
     height:100%;
     /*background:#F4F4F4;*/
+}
+
+#btn-public.active{
+    color:#FFF;
+    background:#5cb85c;
+}
+
+#btn-private.active{
+    color:#FFF;
+    background:#d9534f
 }
 
 #id_user-wrapper{
@@ -934,6 +998,7 @@ table.table-plain td{
     font-weight: 500;
     margin: 30px 0px;
     margin-top: 10px;
+    width: calc(100% - 100px);
 }
 
 .label-file-name{
