--- a/theme/static/css/hydroshare_extends.css
+++ b/theme/static/css/hydroshare_extends.css
@@ -187,7 +187,7 @@ fieldset[disabled].form-group input {
 .form-group > textarea {
   height: auto;
   max-width: 100%;
-  max-height: 100px;
+  /*max-height: 100px;*/
 }
 
 .has-error > input[type="text"],
