--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -21,7 +21,7 @@
                        <li>Keywords</li>
                     {% endif %}
                     {% if title|stringformat:"s" == "Untitled resource" %}
-                       <li>Title:Needs to be changed</li>
+                       <li>Title: needs to be changed</li>
                     {% endif %}
                 </ul>
              </div>
@@ -167,7 +167,7 @@
                         <div class="panel-body">
                             <div class="col-md-4">
                                 <div class="custom-well">
-                                    <h5><strong>Users with full read/write permissions on this resource</strong></h5>
+                                    <h5 class="access-panel-title"><strong>Users with full read/write permissions on this resource</strong></h5>
 
                                     <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
                                           method="POST">
@@ -182,7 +182,7 @@
                                         </select>
                                         <input name="t" value="owners" type="hidden"/>
                                         <button type="submit"
-                                                class="btn btn-update-list pull-left btn-primary glyphicon"><span
+                                                class="btn btn-update-list pull-left btn-default glyphicon"><span
                                                 class="button-label">&nbspUpdate access list</span></button>
                                                 <span data-toggle="tooltip" data-placement="auto"
                                                       title='Hold down "Control", or "Command" on a Mac, to select more than one.'
@@ -204,7 +204,7 @@
 
                             <div class="col-md-4">
                                 <div class="custom-well">
-                                    <h5><strong>Users who can edit the content of this resource</strong></h5>
+                                    <h5 class="access-panel-title"><strong>Users who can edit the content of this resource</strong></h5>
 
                                     <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
                                           method="POST">
@@ -219,7 +219,7 @@
                                         </select>
                                         <input name="t" value="edit_users" type="hidden"/>
                                         <button type="submit"
-                                                class="btn btn-update-list pull-left btn-primary glyphicon"><span
+                                                class="btn btn-update-list pull-left btn-default glyphicon"><span
                                                 class="button-label">&nbspUpdate access list</span></button>
                                                 <span data-toggle="tooltip" data-placement="auto"
                                                       title='Hold down "Control", or "Command" on a Mac, to select more than one.'
@@ -230,10 +230,8 @@
                                           method="POST" style="padding-top:0.3em">
                                         {% csrf_token %}
                                         <div class="form-group">
-
-
                                             <button type="submit"
-                                                    class="btn btn-default btn-add-access pull-left glyphicon glyphicon-plus"><span
+                                                    class="btn btn-add-access btn-default pull-left glyphicon glyphicon-plus"><span
                                                     class="button-label">&nbspAdd user</span></button>
                                             {{ add_edit_user_form.user }}
                                             <input name="t" value="add_edit_user" type="hidden"/>
@@ -244,7 +242,7 @@
 
                             <div class="col-md-4">
                                 <div class="custom-well">
-                                    <h5><strong>Research groups that can edit the content of this resource</strong>
+                                    <h5 class="access-panel-title"><strong>Research groups that can edit the content of this resource</strong>
                                     </h5>
 
                                     <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
@@ -259,7 +257,7 @@
                                         </select>
                                         <input name="t" value="edit_groups" type="hidden"/>
                                         <button type="submit"
-                                                class="btn btn-update-list pull-left btn-primary glyphicon"><span
+                                                class="btn btn-update-list pull-left btn-default glyphicon"><span
                                                 class="button-label">&nbspUpdate access list</span></button>
                                                 <span data-toggle="tooltip" data-placement="auto"
                                                       title='Hold down "Control", or "Command" on a Mac, to select more than one.'
@@ -285,7 +283,7 @@
                             {% if not cm.public %}
                                 <div class="col-md-4">
                                     <div class="custom-well">
-                                        <h5><strong>Users who can view and download the resource</strong></h5>
+                                        <h5 class="access-panel-title"><strong>Users who can view and download the resource</strong></h5>
 
                                         <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
                                               method="POST">
@@ -299,7 +297,7 @@
                                             </select>
                                             <input name="t" value="view_users" type="hidden"/>
                                             <button type="submit"
-                                                    class="btn btn-update-list pull-left btn-primary glyphicon">
+                                                    class="btn btn-update-list pull-left btn-default glyphicon">
                                                 <span class="button-label">&nbspUpdate access list</span></button>
                                                     <span data-toggle="tooltip" data-placement="auto"
                                                           title='Hold down "Control", or "Command" on a Mac, to select more than one.'
@@ -321,7 +319,7 @@
 
                                 <div class="col-md-4">
                                     <div class="custom-well">
-                                        <h5><strong>Research groups that can view and download the resource</strong>
+                                        <h5 class="access-panel-title"><strong>Research groups that can view and download the resource</strong>
                                         </h5>
 
                                         <form action="/hsapi/_internal/{{ cm.short_id }}/change-permissions/"
@@ -336,7 +334,7 @@
                                             </select>
                                             <input name="t" value="view_groups" type="hidden"/>
                                             <button type="submit"
-                                                    class="btn btn-update-list pull-left btn-primary glyphicon">
+                                                    class="btn btn-update-list pull-left btn-default glyphicon">
                                                 <span class="button-label">&nbspUpdate access list</span></button>
                                                     <span data-toggle="tooltip" data-placement="auto"
                                                           title='Hold down "Control", or "Command" on a Mac, to select more than one.'
@@ -445,6 +443,7 @@
                                     </td>
                                 </tr>
                             {% endfor %}
+
                         </table>
                     </div>
                     {% endif %}
