--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1092,6 +1092,10 @@ table.table-plain td{
     -moz-box-shadow: inset 0 1px 0 #ffffff;
     box-shadow: inset 0 1px 0 #ffffff;
 }
+
+#coverageTab{
+    overflow-x:hidden;
+}
 .tab-elements > .tabs-body{
     max-height: 400px;
     min-height: 150px;
@@ -1277,7 +1281,7 @@ body > .container{
 
 .content-block{
     margin-bottom:5px;
-    /*display: table;*/
+    display: table;
     width:100%;
 }
 
